alambert    2005/10/17 23:58:46 UTC	(20051017-2979)
  Log:
  move ChanServ functions out of chanuser_add() and into ChanServ itself. still needs cleanup but much better than having them in node.c

  Changes:	Modified:
  +214 -0	trunk/modules/chanserv/main.c (File Modified) 
  +1 -192	trunk/src/node.c (File Modified) 


nenolod     2005/10/17 15:10:27 UTC	(20051017-2977)
  Log:
  Death to restart delay.

  Changes:	Modified:
  +0 -2		trunk/src/atheme.c (File Modified) 
  +0 -6		trunk/src/conf.c (File Modified) 
  +4 -4		trunk/src/signal.c (File Modified) 


kog         2005/10/17 11:55:05 UTC	(20051017-2975)
  Log:
  uses fcommand for lookups, cleaner and better working code. Now actually works! 
  

  Changes:	Modified:
  +136 -105	trunk/modules/memoserv/ignore.c (File Modified) 


pfish       2005/10/17 09:57:25 UTC	(20051017-2973)
  Log:
  allow ircop override
  

  Changes:	Modified:
  +3 -3		trunk/modules/chanserv/count.c (File Modified) 


pfish       2005/10/17 09:52:19 UTC	(20051017-2971)
  Log:
  Add ChanServ/COUNT:
  -ChanServ- #support: VOp: 0, HOp: 0, AOp: 7, SOp: 4
  

  Changes:	Modified:
  +2 -0		trunk/dist/example.conf (File Modified) 
  +2 -0		trunk/dist/example.userserv.conf (File Modified) 
  +8 -0		trunk/help/cservice/count (File Added) 
  +0 -11	trunk/help/cservice/raw (File Deleted) 
  +1 -0		trunk/modules/chanserv/Makefile.in (File Modified) 
  +1 -0		trunk/modules/chanserv/Makefile.win32 (File Modified) 
  +84 -0	trunk/modules/chanserv/count.c (File Added) 


nenolod     2005/10/17 07:54:35 UTC	(20051017-2969)
  Log:
  - Update .depend for org.atheme.services.binary.
  

  Changes:	Modified:
  +319 -1	trunk/src/.depend (File Modified) 


nenolod     2005/10/17 07:52:19 UTC	(20051017-2967)
  Log:
  - Add memoserv/ignore to win32 makefile.
  - Initial work on an OS/2 port. Because I can, you see.
  

  Changes:	Modified:
  +10 -2	trunk/include/atheme.h (File Modified) 
  +1 -2		trunk/libatheme/linker.c (File Modified) 